# boids_but_faster

./: Cargo.toml  settings.yml
kernels/: compile-shaders.ps1  compile.sh  motion.comp  motion.comp.spv  reduce.comp  reduce.comp.spv  select.comp  select.comp.spv  setup.comp  setup.comp.spv  shared.glsl
shaders/: unlit.vert  unlit.vert.spv
src/: main.rs  sim.rs  visualization.rs
