[package]
name = "fast_boids"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.22"
rand = "0.8"
anyhow = "1"
#klystron = { git = "https://github.com/Masterchef365/klystron.git", branch = "master" }
klystron = { path = "../klystron" }
rmds = { git = "https://github.com/Masterchef365/rmds.git", branch = "staging_buffers" }
#rmds = { path = "../rmds" }
bytemuck = "1.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
